cabal-version:       >=1.10
name:                bleep
version:             0.1.0.0
license:             BSD3
author:              ivanbrennan
maintainer:          ivan.brennan@gmail.com
build-type:          Simple

executable bleep
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , directory >= 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
